app/assets/stylesheets/api/decks.scss
// Place all the styles related to the api/decks controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/
.main-page-decks {
  display: flex;
  width: 100%;
  overflow: hidden;
  min-width: 356px;
}

.splash-overlay {
  width: calc(100vw - 355px);
  height: 100%;
  background-color: #fff;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 35px;
  animation: pulse 1s infinite;
}

.fa-arrow-left {
  animation: bounceLeft 2s infinite;
}

.fa-chevron-left {
  font-size: 16px;
}

@keyframes bounceLeft {
  0%,
  20%,
  50%,
  80%,
  100% {
    -ms-transform: translateX(0);
    transform: translateX(0);
  }
  40% {
    -ms-transform: translateX(30px);
    transform: translateX(30px);
  }
  60% {
    -ms-transform: translateX(15px);
    transform: translateX(15px);
  }
}
/* /left bounce */

@keyframes pulse {
  0% {
    color: rgba(43,146,146,0.5);
  }
  100% {
    color: rgba(43,146,146,1);
  }
}

.visible-xs {
  visibility: hidden;
}

.class-list {
  width: 100%;
  background-color: #f0ad4e;
  position: fixed;
  top: 59px;
  left: 0;
  right: 0;
  border-radius: 0;
  outline: none;
  padding: 6px 12px;
  color: #fff;
  border: 1px solid #ec971f;
  z-index: 1;
}

.class-list:hover {
  background-color: #ec971f;
  border-color: #d58512;
}

.decks-sidebar {
  color: #aaa;
  background-color: #eee;
  font-weight: 300;
  border-right: 1px solid #ddd;
  min-width: 355px;
  height: calc(100vh - 56px);
  h1 {
    font-weight: 300;
    color: #888;
  }

  button {
    padding: 10px;
    cursor: pointer;
    margin-right: 20px;
    color: #fdfdfd;
    border-radius: 5px;
    border: 1px solid #27b574;
    background-color: #27b574;
    transition-duration: 0.2s;
    outline: none;
    box-shadow: 0 2px 4px rgba(0,0,0, 0.5);
  }

  button:hover {
    background-color: #1e8c59;
    border: 1px solid #1e8c59;
  }

  button:first-child {
    border: 1px solid #3f8fcd;
    background-color: #3f8fcd;
  }

  button:first-child:hover {
    border: 1px solid #35709d;
    background-color: #35709d;
  }
}
.deck-select {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #fff;
}

.deck-content {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  color: #777;
  width: 339px;
  height: 110px;
  transition-duration: 0.15s;
  list-style: none;
  padding: 15px 28px;
  box-sizing: border-box;
  border: 3px solid rgba(0, 0, 0, 0);
}

.deck-content:hover {
  background-color: #2b9292;
  color: #fff;
  border-color: #2b9292;
  cursor: pointer;
  .deck-content-title {
    color: #fff;
  }
}

.deck-content-title {
  font-size: 18px;
  font-weight: 400;
  color: #666;
  white-space: nowrap;
  width: 310px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.deck-content-first {
  margin-top: 10px;
  font-size: 12px;
}

.deck-list {
  margin-top: 5px;
  font-size: 12px;
}

.deck-divider {
  width: 100%;
  border: 0.5px solid #ddd;
  height: 0;
}

.decks-sidebar-header {
  background-color: #fff;
  display: flex;
  justify-content: space-around;
  align-items: center;
  border-bottom: 1px solid #ddd;
  height: 75px;
  min-width: 355px;
}

.decks-body {
  overflow-y: auto;
  overflow-x: hidden;
  height: calc(100vh - 135px);
}

.deck-create-form {
  height: 100%;
  width: 1000%;
  background-color: #fff;
  color: #aaa;
  padding: 25px 50px;
  box-sizing: border-box;
  z-index: 999;

  form {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    input[type="submit"] {
      align-self: flex-end;
      cursor: pointer;
      margin-top: 25px;
      padding: 10px;
      width: 150px;
      margin-right: 20px;
      color: #fff;
      font-size: 18px;
      border-radius: 5px;
      background-color: #27b574;
      border: 1px solid #27b574;
      -webkit-transition-duration: 0.2s;
      transition-duration: 0.2s;
      box-shadow: 0 2px 4px rgba(0,0,0, 0.5);
    }

    input[type="submit"]:hover,
    input[type="submit"]:focus,
    input[type="submit"]:active {
      background-color: #1e8c59;
      border: 1px solid #1e8c59;
      outline: none;
    }

    input[type="text"] {
      color: #2b9292;
      font-family: 'Sanchez', serif;
      margin-top: 75px;
      font-size: 24px;
      width: 100%;
      border: none;
      border-bottom: 1px solid #ddd;
      margin-top: 50px;
      margin-bottom: 10px;
      height: 50px;
      outline: none;
    }

    ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
      color: #2b9292;
      opacity: 1; /* Firefox */
    }

    :-ms-input-placeholder { /* Internet Explorer 10-11 */
      color: #2b9292;
    }

    ::-ms-input-placeholder { /* Microsoft Edge */
      color: #2b9292;
    }
  }

}

.deck-show-page {
  width: 1000%;
  height: calc(100vh - 59px);
  background-color: #fff;
  color: #aaa;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  padding: 25px 50px;
  box-sizing: border-box;
  overflow-y: auto;
  overflow-x: hidden;
  position: relative;
}

.deck-header {
  font-size: 40px;
  font-weight: 300;
  width: 100%;

}

.deck-delete {

  align-self: flex-end;
  border: none;
  outline: none;
  color: #555;
  cursor: pointer;
  background-color: rgba(0,0,0,0);
  position: absolute;
  right: 3vw;
  top: 11px;
}

.deck-study {
  margin-top: 20px;
  cursor: pointer;
  padding: 10px;
  width: 100px;
  color: #fff;
  font-size: 18px;
  border-radius: 5px;
  background-color: #2b9292;
  border: 1px solid #2b9292;
  outline: none;
  box-shadow: 0 2px 4px rgba(0,0,0, 0.5);
}

.deck-study:hover {
  background-color: #257777;
  transition: 0.2s;
}

.deck-cards-divider {
  width: 100%;
  border: 0.5px solid #ddd;
  height: 0;
  margin-bottom: 30px;
}

.deck-title {
  margin-top: 5vh;
}
.deck-title-span {
  align-self: flex-start;
  color: #777;
  white-space: nowrap;
}

.deck-mastery {
  margin: 20px 0px;
}

.selected {
  border: 3px solid #ddd;
}

.app {
  // putting overflow hidden over the entire page prevents weird 
  // whitespace issues for vw strategy,
  // but also covers up nav buttons. At least it looks good!
  overflow-x: hidden;
}

.on-top {
  z-index: 999;
}

@media (max-width: 815px) {
  
  .main-page-decks {
    position: fixed;
    display: block;
  }
  
  .deck-content {
    width: 100%;
  }
  
  .decks-sidebar-header {
    justify-content: space-between;
    padding: 0 0 0 20px;
  }
  
  .visible-xs {
    visibility: visible;
  }
  
  .deck-show-page {
    padding: 7vh 5vw;
  }
  
  .deck-header {
    display: block;
  }
  
  .deck-title {
    height: inherit;
    margin-top: 1vh;
  }
  
  .deck-delete {
    position: absolute;
    top: 4vh;
    right: 2vw;
  }
  
  .cards-index form {
    padding: 15px 0;
    
    button {
      position: absolute;
      right: 4vw;
    }
  }
  
  .row-front {
    margin-right: 3vw;
  }
}

@media (max-width: 325px) {
  .decks-sidebar-header {
    justify-content: space-around;
    padding: 0;
  }
}

